2019-11-02  Paolo Carlini  <paolo.carlini@oracle.com>

	* g++.dg/conversion/ptrmem9.C: Check location.
	* g++.dg/expr/cond2.C: Likewise.
	* g++.dg/warn/Waddress-1.C: Check locations.
	* g++.old-deja/g++.bugs/900324_02.C: Check location.
	* g++.old-deja/g++.jason/rfg20.C: Likewise.
	* g++.old-deja/g++.law/typeck1.C: Likewise.
	* g++.old-deja/g++.rfg/00321_01-.C: Likewise.
	* g++.old-deja/g++.rfg/00324_02-.C: Likewise.

	* g++.dg/diagnostic/alignof1.C: New.
	* g++.dg/expr/sizeof1.C: Check location.
	* g++.dg/cpp0x/rv-lvalue-req.C: Check locations.

2019-11-02  Jakub Jelinek  <jakub@redhat.com>

	* c-c++-common/gomp/declare-variant-12.c: New test.

	PR c++/89640
	* g++.dg/cpp1z/attr-lambda1.C: New test.
	* g++.dg/ext/attr-lambda2.C: New test.

	* c-c++-common/gomp/declare-variant-6.c: Expect construct rather than
	constructor in diagnostic messages.
	* c-c++-common/gomp/declare-variant-7.c: Likewise.
	* c-c++-common/gomp/declare-variant-11.c: New test.

	PR c++/88335 - Implement P1073R3: Immediate functions
	* g++.dg/cpp2a/consteval1.C: New test.
	* g++.dg/cpp2a/consteval2.C: New test.
	* g++.dg/cpp2a/consteval3.C: New test.
	* g++.dg/cpp2a/consteval4.C: New test.
	* g++.dg/cpp2a/consteval5.C: New test.
	* g++.dg/cpp2a/consteval6.C: New test.
	* g++.dg/cpp2a/consteval7.C: New test.
	* g++.dg/cpp2a/consteval8.C: New test.
	* g++.dg/cpp2a/consteval9.C: New test.
	* g++.dg/cpp2a/consteval10.C: New test.
	* g++.dg/cpp2a/consteval11.C: New test.
	* g++.dg/cpp2a/consteval12.C: New test.
	* g++.dg/cpp2a/consteval13.C: New test.
	* g++.dg/cpp2a/consteval14.C: New test.
	* g++.dg/ext/consteval1.C: New test.

	PR c++/91369 - Implement P0784R7: constexpr new
	* g++.dg/cpp2a/constexpr-new6.C: New test.
	* g++.dg/cpp2a/constexpr-new7.C: New test.

	* gcc.dg/pr36902.c: Terminate dg-warning regexp string.

2019-11-01  Martin Sebor  <msebor@redhat.com>

	PR middle-end/91679
	PR middle-end/91647
	PR middle-end/91463
	PR middle-end/92312